--- a/package.json
+++ b/package.json
@@ -99,9 +99,11 @@
     "electron-log": "^4.4.8",
     "electron-router-dom": "^1.0.5",
     "electron-updater": "^5.3.0",
+    "file-saver": "^2.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.2"
+    "react-router-dom": "^6.11.2",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@electron/notarize": "^1.2.3",
